// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackCards creates correct snapshot for an array of notebooks 1`] = `
<WithStyles(Grid)
  container={true}
>
  <WithStyles(Grid)
    item={true}
    key="0"
    lg={4}
    md={4}
    sm={6}
    xl={2}
    xs={12}
  >
    <WithStyles(StackCard)
      deletePermission="delete"
      deleteStack={[Function]}
      editPermission="edit"
      openPermission="open"
      openStack={[Function]}
      stack={
        Object {
          "displayName": "name1",
          "id": "1",
          "type": "type1",
        }
      }
      typeName="expectedTypeName"
      userPermissions={
        Array [
          "open",
          "delete",
          "create",
          "edit",
        ]
      }
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    key="1"
    lg={4}
    md={4}
    sm={6}
    xl={2}
    xs={12}
  >
    <WithStyles(StackCard)
      deletePermission="delete"
      deleteStack={[Function]}
      editPermission="edit"
      openPermission="open"
      openStack={[Function]}
      stack={
        Object {
          "displayName": "name2",
          "id": "2",
          "type": "type2",
        }
      }
      typeName="expectedTypeName"
      userPermissions={
        Array [
          "open",
          "delete",
          "create",
          "edit",
        ]
      }
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    key="2"
    lg={4}
    md={4}
    sm={6}
    xl={2}
    xs={12}
  >
    <WithStyles(StackCard)
      deletePermission="delete"
      deleteStack={[Function]}
      editPermission="edit"
      openPermission="open"
      openStack={[Function]}
      stack={
        Object {
          "displayName": "name3",
          "id": "3",
          "type": "type3",
        }
      }
      typeName="expectedTypeName"
      userPermissions={
        Array [
          "open",
          "delete",
          "create",
          "edit",
        ]
      }
    />
  </WithStyles(Grid)>
  <ComponentWrapper
    permission="create"
    style={
      Object {
        "width": "100%",
      }
    }
    userPermissions={
      Array [
        "open",
        "delete",
        "create",
        "edit",
      ]
    }
  >
    <WithStyles(Grid)
      item={true}
      lg={4}
      md={4}
      sm={6}
      xl={2}
      xs={12}
    >
      <WithStyles(NewStackButton)
        onClick={[Function]}
        typeName="expectedTypeName"
      />
    </WithStyles(Grid)>
  </ComponentWrapper>
</WithStyles(Grid)>
`;

exports[`StackCards creates correct snapshot for an empty array 1`] = `
<WithStyles(Grid)
  container={true}
>
  <ComponentWrapper
    permission="create"
    style={
      Object {
        "width": "100%",
      }
    }
    userPermissions={
      Array [
        "open",
        "delete",
        "create",
        "edit",
      ]
    }
  >
    <WithStyles(Grid)
      item={true}
      lg={4}
      md={4}
      sm={6}
      xl={2}
      xs={12}
    >
      <WithStyles(NewStackButton)
        onClick={[Function]}
        typeName="expectedTypeName"
      />
    </WithStyles(Grid)>
  </ComponentWrapper>
</WithStyles(Grid)>
`;
